scripts/kiali-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
  namespace: istio-system
  labels:
    app: kiali
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http1
        protocol: HTTP
      hosts:
        - "localkiali.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
  labels:
    app: kiali
spec:
  hosts:
    - "localkiali.com"
  gateways:
    - kiali-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kiali
            port:
              number: 20001
