scripts/monitoring-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: monitoring
  labels:
    app: monitoring
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http3
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: monitoring
  namespace: monitoring
spec:
  hosts:
    - "*"
  gateways:
    - monitoring-gateway
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            host: kiali.monitoring.svc.cluster.local
            port:
              number: 20001
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-grafana.monitoring.svc.cluster.local
            port:
              number: 80
